connector/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connector
  namespace: linguist-system-backend
  labels:
    app: connector
spec:
  replicas: 1
  selector:
    matchLabels:
      app: connector
  template:
    metadata:
      labels:
        app: connector
    spec:
      containers:
        - name: connector-container
          image: connector
          resources:
            limits:
              memory: 2000Mi
              cpu: 2
            requests:
              memory: 1000Mi
              cpu: 1
          ports:
            - containerPort: 8068
      imagePullSecrets:
        - name: reg-sample
