connector/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connector
  namespace: linguist-system-backend
  labels:
    app: connector
spec:
  selector:
    app: connector
  ports:
    - protocol: TCP
      port: 8068
      targetPort: 8068
